[package]
name = "navipod"
version = "0.8.6"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A cli tool for inspecting containers in Kubernetes"
keywords = ["kubernetes", "commandline", "k8s", "tui", "ratatui"]
documentation = "https://docs.rs/navipod"
repository = "https://github.com/navicore/navipod"

[[bin]]
name = "navipod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
bytes = "1.6.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.27"
csv = "1.3"
derive_more = { version="1.0.0-beta", features = ["from"] }
fakeit = "1.1"
futures = "0.3"
hyper = "1.3.1"
hyper-util = "0.1.3"
itertools = "0.12"
k8s-openapi = { version = "0.21", features = ["v1_29"] }
kube = { version = "0.90", features = ["runtime", "derive", "client", "ws"] }
pin-project = "1.1.5"
ratatui = "0.26"
regex = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rustls = "0.23"
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio-native-tls" ] }
thiserror = "1"
time = "0.3" # For handling dates in the certificate
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "=0.24"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.4"
tower-http = "0.5"
tower-test = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.1"
uuid = { version = "1", features = [ "v4" ] }
webpki = "0.22"
webpki-roots = "0.25"
wiremock = "0.6.0"
x509-parser = "0.16.0"

[dev-dependencies]
anyhow = "1"
