[package]
name = "navipod"
version = "0.8.20"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A cli tool for inspecting containers in Kubernetes"
keywords = ["kubernetes", "commandline", "k8s", "tui", "ratatui"]
documentation = "https://docs.rs/navipod"
repository = "https://github.com/navicore/navipod"

[[bin]]
name = "navipod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.28"
csv = "1.3"
derive_more = { version="1.0.0", features = ["from"] }
fakeit = "1.3"
futures = "0.3"
hyper = "1.5.2"
hyper-util = "0.1.9"
itertools = "0.14"
k8s-openapi = { version = "0.23", features = ["v1_29"] }
kube = { version = "0.95.0", features = ["runtime", "derive", "client", "ws"] }
ratatui = "0.29"
pin-project = "1.1.6"
regex = "1.11"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rustls = "0.23"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio-native-tls" ] }
thiserror = "2"
time = "0.3" # For handling dates in the certificate
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "=0.24"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = "0.4"
tower-http = "0.6"
tower-test = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
uuid = { version = "1", features = [ "v4" ] }
webpki = "0.22"
webpki-roots = "0.25"
wiremock = "0.6.2"
x509-parser = "0.17.0"

[dev-dependencies]
anyhow = "1"

[package.metadata.cargo-alias]
clippy-fixes = "clippy --fix -- -W clippy::pedantic -W clippy::nursery -W clippy::unwrap_used -W clippy::expect_used"
clippy-strict = "clippy -- -W clippy::pedantic -W clippy::nursery -W clippy::unwrap_used -W clippy::expect_used"
