[package]
name = "navipod"
version = "0.8.21"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A cli tool for inspecting containers in Kubernetes"
keywords = ["kubernetes", "commandline", "k8s", "tui", "ratatui", "ws"]
documentation = "https://docs.rs/navipod"
repository = "https://github.com/navicore/navipod"

[[bin]]
name = "navipod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
csv = "1.3"
derive_more = { version="2.0.1", features = ["from"] }
fakeit = "1.3"
futures = "0.3"
hyper = "1.7.0"
hyper-util = "0.1.16"
itertools = "0.14"
k8s-openapi = { version = "0.25", features = ["latest"] }
kube = { version = "1", features = ["runtime", "derive", "ws"] }
ratatui = "0.29"
pin-project = "1.1.10"
regex = "1.11"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rustls = { version = "0.23", features = ["logging", "tls12"] }
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio-native-tls" ] }
thiserror = "2"
time = "0.3" # For handling dates in the certificate
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26"
tokio-stream = "0.1"
tokio-util = "0.7"
tower = {version = "0.4", features = ["util"] }
tower-http = "0.6"
tower-test = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
uuid = { version = "1", features = [ "v4" ] }
webpki = "0.22"
webpki-roots = "1"
wiremock = "=0.6.4"
x509-parser = "0.17.0"

[dev-dependencies]
anyhow = "1"

[package.metadata.cargo-alias]
clippy-fixes = "clippy --fix -- -W clippy::pedantic -W clippy::nursery -W clippy::unwrap_used -W clippy::expect_used"
clippy-strict = "clippy -- -W clippy::pedantic -W clippy::nursery -W clippy::unwrap_used -W clippy::expect_used"
